[package]
name = "systemd-dmenu"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
